--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 KahanSummation = "8e2b3108-d4c1-50be-a7a2-16352aec75c3"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
